--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CST438-Register-frontend-Bundy</name>
+	<name>cst438_sched</name>
 	<comment></comment>
 	<projects>
 	</projects>
